Fixed modal positioning and alignment.

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   font-family: "Raleway", sans-serif;
   color: #1e3c69;
   font-weight: 650;
+  background-color: #b3b3b3;
 }
 
 .component-title {
@@ -12,12 +13,17 @@ body {
 }
 
 .modal {
-  width: 80%;
+  width: 90%;
   max-width: 1000px;
   margin: 2rem auto;
   background: white;
-  padding: 20px;
-  border-radius: 5px;
+  padding: 20px 100px;
+  border-radius: 30px;
+}
+
+.modal.content {
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .content {
